<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="232dp"
        android:scaleType="fitStart"
        android:src="@drawable/header" />
    <LinearLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_2x">
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/titleWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_title" >

                </TextView>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_bookmark"
                    android:layout_weight="1"/>


            </LinearLayout>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_subtitle"
                android:layout_marginTop="@dimen/margin"
                 />
        //los botones de alquilá
        <LinearLayout
            android:id="@+id/rentButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_2x"
            android:layout_marginBottom="@dimen/margin_2x">

            <Button
                android:id="@+id/btnRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_btnRent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin_2x"
                />

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_btnBuy"
                android:layout_weight="1"/>


        </LinearLayout>



        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="@dimen/margin_2x">

            <LinearLayout
                android:id="@+id/penLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"

                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:tint="@color/white"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/penSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/main_pen_subtitle"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/familyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_family"
                    app:tint="@color/white"
                    />

                <TextView
                    android:id="@+id/familySubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/main_family_subtitle"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/tomatoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tomato"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tommatoSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/main_tommato"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/similarLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_similar"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/similarSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/main_similar_subtitle"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>




        </LinearLayout>

        <TextView
            android:id="@+id/parragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/main_parragraph"
            android:textSize="18dp"
            />


    </LinearLayout>

</LinearLayout>